<resources>
    <string name="ks_app_name">KwaiVideoCall</string>

    <string name="ks_title_1">你好，</string>
    <string name="ks_title_2">欢迎使用 Kwai RTC</string>
    <string name="ks_channel_id">房间ID</string>
    <string name="ks_channel_id_space">房间 ID：</string>
    <string name="ks_channle_info">房间信息</string>
    <string name="ks_channel_id_value">ID：%s</string>
    <string name="ks_copy_channel_id">复制房间ID</string>
    <string name="ks_user_id">用户ID</string>
    <string name="ks_nick_name">昵称</string>
    <string name="ks_input_roomid_hint">请输入房间ID</string>
    <string name="ks_input_user_id_hint">请输入用户ID</string>
    <string name="ks_input_nickname_hint">请输入昵称</string>
    <string name="ks_nickname_limit_hint">请输入长度不超过18位的英文、数字、汉字、特殊字符</string>
    <string name="ks_open_mic">打开麦克风</string>
    <string name="ks_open_camera">打开摄像头</string>
    <string name="ks_enter_room">进入房间</string>
    <string name="ks_cancel">取消</string>
    <string name="ks_confirm">确定</string>
    <string name="ks_channel_password">房间密码：</string>
    <string name="ks_av_auth">请在“设置-应用管理”中开启相机/麦克风权限，以正常通话</string>
    <string name="ks_setting">设置</string>
    <string name="ks_video_param">视频参数</string>
    <string name="ks_video_clarity">清晰度</string>
    <string name="ks_video_bitrate">码率</string>
    <string name="ks_bitrate_value">%d Kbps</string>
    <string name="ks_video_fps">帧率</string>
    <string name="ks_fps_value">%d FPS</string>
    <string name="ks_audio_param">音频参数</string>
    <string name="ks_audio_samplerate">采样率</string>
    <string name="ks_audio_dns">智能降噪</string>
    <string name="ks_version_log">版本和日志</string>
    <string name="ks_sdk_ver">SDK 版本</string>
    <string name="ks_demo_ver">Demo 版本</string>
    <string name="ks_call_real_time_quality">通话质量实时数据</string>
    <string name="ks_log">客户端日志</string>
    <string name="ks_upload_log">日志上传</string>
    <string name="ks_leave">离开</string>
    <string name="ks_mic">麦克风</string>
    <string name="ks_camera">摄像头</string>
    <string name="ks_members">成员（%d）</string>
    <string name="ks_member">成员</string>
    <string name="ks_beauty">美颜</string>
    <string name="ks_wait_enter">期待加入</string>
    <string name="ks_beauty_polish">磨皮</string>
    <string name="ks_beauty_whiten">美白</string>
    <string name="ks_cpu_key">CPU App/Total:</string>
    <string name="ks_memory_key">Memery:</string>
    <string name="ks_rtt_key">RTT:</string>
    <string name="ks_resolution_key">Resolution:</string>
    <string name="ks_video_rt_bitrate_key">Video Send/Recv:</string>
    <string name="ks_audio_rt_bitrate_key">Audio Send/Recv:</string>
    <string name="ks_rt_loss_key">Send/Recv Loss:</string>
    <string name="ks_cpu_value">%d%%/%s%%</string>
    <string name="ks_memory_value">%d MB</string>
    <string name="ks_rtt_value">%sms</string>
    <string name="ks_video_param_value">%dx%d %dfps</string>
    <string name="ks_video_rt_bitrate_value">%1dkbps/%2dkbps</string>
    <string name="ks_audio_rt_bitrate_value">%1dkbps/%2dkbps</string>
    <string name="ks_rt_loss_value">%s%%/%s%%</string>
    <string name="ks_net_error_hint">网络不可用，请检查网络设置</string>
    <string name="ks_channel_password_err">房间密码错误，进入失败</string>
    <string name="ks_excced_channel_limit">当前房间人数已满，请稍后再试</string>
    <string name="ks_known">知道了</string>
    <string name="ks_loging">登录中</string>
    <string name="ks_uploading">上传中</string>
    <string name="ks_upload_fail">上传失败</string>
    <string name="ks_upload_success">上传成功</string>
    <string name="ks_zip_fail">压缩失败，终止上传</string>
    <string name="ks_cannot_set_beauty">摄像头未开启，无法设置美颜</string>
    <string name="ks_enter_room_repeat">请勿重复加入房间</string>
    <string name="ks_360p">流畅（360P）</string>
    <string name="ks_540p">标清（540P）</string>
    <string name="ks_720p">高清（720P）</string>
    <string name="ks_copy_success">复制成功</string>
    <string name="ks_heart_lost">连接已断开，需重新加入会议</string>
</resources>